--- a/Transact/Transact.csproj
+++ b/Transact/Transact.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Transactions.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="TransactionListViewAdapter.cs" />
+    <Compile Include="AccountViewHolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
