* EnterTransaction.cs: Started changing transactions to use the   recyclerview (not finished)
* Transact.csproj:
* Transactions.cs:
* TransactionViewHolder.cs:
* TransactionListViewAdapter.cs:
* Transactions.axml:
* listView_transactions.axml:

--- a/Transact/Transact.csproj
+++ b/Transact/Transact.csproj
@@ -97,8 +97,9 @@
     <Compile Include="Database.cs" />
     <Compile Include="Transactions.cs" />
     <Compile Include="Transaction.cs" />
-    <Compile Include="TransactionListViewAdapter.cs" />
     <Compile Include="AccountViewHolder.cs" />
+    <Compile Include="TransactionViewHolder.cs" />
+    <Compile Include="TransactionListViewAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
