--- a/Transact/Transact.csproj
+++ b/Transact/Transact.csproj
@@ -153,22 +153,25 @@
     <AndroidResource Include="Resources\layout\popup_menu_transaction.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\menu\bottom_menu.xml" />
+    <AndroidResource Include="Resources\menu\bottom_menu_accounts.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_add_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_add_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_event_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_event_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_done_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_done_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_close_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_arrow_back_black_48dp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\add_with_padding.xml" />
+    <AndroidResource Include="Resources\menu\bottom_menu_add_account.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_close_black_48dp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
